# buddy_face_screen

./: CMakeLists.txt  README.md  package.xml  puntos_cerrados.txt  transformation.py  transition.py  united_morph_transition.py  version1.py  video_generation.py
hola/: speak_ojos_abiertos_b1.psd  speak_ojos_abiertos_b2.psd  speak_ojos_cerrados_b1.psd
imgs/: normal_ojos_abiertos.psd  speak_ojos_cerrados_b2.psd
imgs/boca_ojos_unidos/: normal_ojos_cerrados.psd
imgs/editables/: boca_abierta.psd  boca_cerrada.psd  ojos_abiertos.psd  ojos_cerrados.psd
include/: face_screen.hpp
points/: boca_abierta.txt  close_eyes.txt  close_mouth.txt  open_eyes.txt  open_mouth.txt
puntos/: boca_cerrada.txt  ojos_abiertos.txt  ojos_cerrados.txt  puntos_abiertos.txt
scripts/: frames_generation.py  united_morph_transition.py  video_generation.py
src/: face_screen.cpp  face_screen.py  united_morph_transition.py  video_generation.py
